Calendar event and Calendar services

--- a/app/src/main/res/layout/activity_horario.xml
+++ b/app/src/main/res/layout/activity_horario.xml
@@ -7,12 +7,12 @@
     tools:context=".horario">
 
     <TextView
-        android:id="@+id/Horários"
+        android:id="@+id/txtvHorario"
         android:layout_width="128dp"
         android:layout_height="91dp"
         android:layout_marginStart="128dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="128dp"
+        android:layout_marginEnd="135dp"
         android:text="Horários"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
