--- a/app/src/main/res/layout/spinner_horarios.xml
+++ b/app/src/main/res/layout/spinner_horarios.xml
@@ -2,34 +2,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtvDisciplina"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Disciplina" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/txtvHorarioInicio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="HorarioInicio" />
+        <TextView
+            android:id="@+id/txtNomeDisciplina"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="nome disc"
+            android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/txtvHorarioFim"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="HorarioFim" />
+        <TextView
+            android:id="@+id/txtDiaSemana"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="dia semana"
+            android:textSize="24sp" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtvDiaSemana"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView"
-        tools:text="DiaSemana" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtHoraInicio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="data inicio"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/txtHoraFim"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="data fim"
+            android:textSize="24sp" />
+    </LinearLayout>
+
 </LinearLayout>
